--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
   "author": "Egri Szabolcs",
   "license": "ISC",
   "dependencies": {
+    "@ethercards/ec-util": "^1.0.4",
     "@nomicfoundation/hardhat-toolbox": "^2.0.0",
     "@nomiclabs/hardhat-ethers": "^2.1.1",
     "@openzeppelin/contracts": "^4.7.3",
     "dotenv": "^16.0.2",
+    "ethereum-waffle": "^3.4.4",
     "hardhat": "^2.11.2"
   },
   "devDependencies": {
